@@ -7,7 +7,7 @@
 
 /***********************************************************************
  *
- * Copyright 2000, 2001, 2002 Free Software Foundation, Inc.
+ * Copyright 2000, 2001, 2002, 2006 Free Software Foundation, Inc.
  * Written by Paolo Bonzini.
  *
  * This file is part of GNU lightning.
@@ -202,14 +202,14 @@ struct jit_local_state {
 #define jit_jmpr(reg)			(MTLRr(reg), BLR())
 #define jit_ldxi_c(d, rs, is)		(jit_ldxi_uc((d), (rs), (is)), jit_extr_c_i((d), (d)))
 #define jit_ldxr_c(d, s1, s2)		(jit_ldxr_uc((d), (s1), (s2)), jit_extr_c_i((d), (d)))
-#define jit_ldxi_i(d, rs, is)		jit_chk_ims((d), LWZrm((d), (is), (rs)), LWZrx((d), JIT_AUX, (rs)))
-#define jit_ldxi_s(d, rs, is)		jit_chk_ims((d), LHArm((d), (is), (rs)), LHArx((d), JIT_AUX, (rs)))
-#define jit_ldxi_uc(d, rs, is)		jit_chk_ims((d), LBZrm((d), (is), (rs)), LBZrx((d), JIT_AUX, (rs)))
-#define jit_ldxi_us(d, rs, is)		jit_chk_ims((d), LHZrm((d), (is), (rs)), LHZrx((d), JIT_AUX, (rs)))
-#define jit_ldxr_i(d, s1, s2)				 LWZrx((d), (s1), (s2))
-#define jit_ldxr_s(d, s1, s2)				 LHArx((d), (s1), (s2))
-#define jit_ldxr_uc(d, s1, s2)				 LBZrx((d), (s1), (s2))
-#define jit_ldxr_us(d, s1, s2)				 LHZrx((d), (s1), (s2))
+#define jit_ldxi_i(d, rs, is)		jit_chk_ims((is), LWZrm((d), (is), (rs)), LWZrx((d), JIT_AUX, (rs)))
+#define jit_ldxi_s(d, rs, is)		jit_chk_ims((is), LHArm((d), (is), (rs)), LHArx((d), JIT_AUX, (rs)))
+#define jit_ldxi_uc(d, rs, is)		jit_chk_ims((is), LBZrm((d), (is), (rs)), LBZrx((d), JIT_AUX, (rs)))
+#define jit_ldxi_us(d, rs, is)		jit_chk_ims((is), LHZrm((d), (is), (rs)), LHZrx((d), JIT_AUX, (rs)))
+#define jit_ldxr_i(d, s1, s2)				  LWZrx((d), (s1), (s2))
+#define jit_ldxr_s(d, s1, s2)				  LHArx((d), (s1), (s2))
+#define jit_ldxr_uc(d, s1, s2)				  LBZrx((d), (s1), (s2))
+#define jit_ldxr_us(d, s1, s2)				  LHZrx((d), (s1), (s2))
 #define jit_lei_i(d, rs, is)		jit_sbooli2((d), (rs), (is), _gt )
 #define jit_lei_ui(d, rs, is)		jit_ubooli2((d), (rs), (is), _gt )
 #define jit_ler_i(d, s1, s2)		jit_sboolr2((d), (s1), (s2), _gt )
